syntax = "proto3";

package ticketing.api.show.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/api/field_behavior.proto";
import "validate/validate.proto";
import "query/operation.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
option go_package = "github.com/go-saas/commerce/ticketing/api/show/v1;v1";


service ShowService {
  rpc ListShow (ListShowRequest) returns (ListShowReply){
    option (google.api.http) = {
      get: "/v1/ticketing/show",
      additional_bindings:{
        post:"/v1/show/show/list",
        body:"*"
      }
    };
  }
  rpc GetShow (GetShowRequest) returns (Show){
    option (google.api.http) = {
      get: "/v1/ticketing/show/{id}"
    };
  }
  rpc CreateShow (CreateShowRequest) returns (Show){
    option (google.api.http) = {
      post: "/v1/ticketing/show",
      body: "*"
    };
  }
  rpc UpdateShow (UpdateShowRequest) returns (Show){
    option (google.api.http) = {
      put: "/v1/ticketing/show/{show.id}",
      body: "*"
      additional_bindings{
        patch: "/v1/ticketing/show/{show.id}",
        body: "*"
      }
    };
  }
  rpc DeleteShow (DeleteShowRequest) returns (DeleteShowReply){
    option (google.api.http) = {
      delete: "/v1/ticketing/show/{id}"
    };
  }

}

message CreateShowRequest {
  string name =1 [(validate.rules).string.min_len=1,(google.api.field_behavior) = REQUIRED];
}

message UpdateShowRequest {
  UpdateShow show=1 [(validate.rules).message.required=true,(google.api.field_behavior) = REQUIRED];
  google.protobuf.FieldMask update_mask = 2;
}

message UpdateShow{
  string id=1 [(validate.rules).string.min_len=1,(google.api.field_behavior) = REQUIRED];
  string name=2;
}


message DeleteShowRequest {
  string id=1;
}
message DeleteShowReply {
  string id=1;
  string name=2;
}

message GetShowRequest {
  string id=1 [(validate.rules).string.min_len=1,(google.api.field_behavior)=REQUIRED];
}

message ShowFilter{
  query.operation.StringFilterOperation id=1;
  query.operation.StringFilterOperation name =2;
}
message ListShowRequest {
  int32 page_offset =1;
  int32 page_size = 2;
  string search = 3;
  repeated string sort =4;
  google.protobuf.FieldMask fields=5;
  ShowFilter filter =6;
}
message ListShowReply {
  int32 total_size =1;
  int32 filter_size =2;
  repeated Show items=3;
}
message Show{
  string id=1;
  string name=2;
  google.protobuf.Timestamp created_at =4;
}
